tests/ui/errors/snapshots/parse_chained_range.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:25]
 1 │ fn test() { let r = 0..1..2; }
   ·                         ─┬
   ·                          ╰── not allowed
   ╰────
  help: Chained range operators are not supported · code: [parse.syntax_error]
