tests/ui/errors/snapshots/parse_empty_generic_bounds.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:8]
 1 │ 
 2 │ fn f<T:>() {}
   ·        ┬
   ·        ╰── expected bound after `:`
   ╰────
  help: Provide a bound like `T: Display` · code: [parse.syntax_error]
