tests/ui/errors/snapshots/parse_error_import_invalid_path.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:2:8]
 1 │ 
 2 │ import foo.bar;
   ·        ─┬─
   ·         ╰── expected double quotes
   ╰────
  help: Wrap the import path in double quotes: `import "foo"` · code: [parse.syntax_error]
