tests/ui/errors/snapshots/parse_error_local_enum_in_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:3:3]
 2 │ fn test() {
 3 │   enum Color { Red, Green, Blue }
   ·   ──┬─
   ·     ╰── misplaced
 4 │ }
   ╰────
  help: Move this enum definition to the top level of the file · code: [parse.syntax_error]
